Fix spacing and wrap on llama pics and text

--- a/styles.css
+++ b/styles.css
@@ -133,29 +133,36 @@ button {
     border-color: greenyellow;
 }
 
-.point, 
+.point,
 .section-three{
     display: flex;
     flex-direction: column;
-    width: 100%;
     align-items: center;
     gap: 0px;
 }
 
 .key-points {
-    flex-wrap: nowrap;
+    display: flex;
+    flex-wrap: wrap;
     gap: 30px;
     text-align: center;
-    display: flex;
     align-items: flex-start;
     justify-content: center;
+    width: 100%;
+    padding: 0;
 }
 
 .point-pic {
-    max-width: 200px;
+    max-width: 225px;
     height: auto;
     border-radius: 20px;
     border: 4px solid white;
+}
+
+.point-text {
+    max-width: 225px;
+    width: 100%;
+    font-size: 16px;
 }
 
 .attribution {
